# fuel-forge-game

./: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  zellij.kdl
onchain/: .gitignore  delete_proxy_address.js  fix-imports.js  fuel-toolchain.toml  fuels.config.ts  package.json
onchain/contract/: Cargo.toml  Forc.toml  Forc.toml.backup
onchain/contract/src/: main.sw
onchain/contract/tests/: harness.rs
onchain/test/: contract.test.ts
onchain/typescript/: tsconfig.json
onchain/typescript/lib/: index.ts
patches/: @fuel-ts__account.patch
web/: .env  .gitignore  package.json  svelte.config.js
web/src/: app.html
web/src/lib/: emitter.ts  index.ts
web/src/lib/connection/: index.ts
web/src/lib/onchain/: auto-submit.ts  direct-read.ts  state-differ.ts  types.ts  writes.ts
web/src/lib/render/: LoadingBtimapText.ts  PixiCanvas.svelte  renderer.ts
web/src/lib/ui/: keyboard-controller.ts
web/src/lib/ui/structure/: TopBar.svelte
web/src/lib/view/: index.ts  localState.ts
web/src/routes/: +page.svelte
