[package]
name = "my-fuel-project"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["wighawag <wighawag@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.70.0"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
